--- a/src/main/styles/dashboard.scss
+++ b/src/main/styles/dashboard.scss
@@ -1,5 +1,41 @@
 @import "colours";
 
+.grid-small {
+	display: grid;
+	grid-template-areas:
+		"profile welcome"
+		"actions reports";
+	grid-template-columns: 450px 450px;
+	grid-template-rows: 450px 450px;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+}
+
+.grid-medium {
+	display: grid;
+	grid-template-areas:
+		"welcome welcome"
+		"profile profile"
+		"actions actions"
+		"reports reports";
+	grid-template-columns: 450px;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+
+	svg,
+	a {
+		color: $link;
+	}
+
+	td {
+		font-size: 14px;
+		padding: 0 0 1.43rem;
+		color: $text;
+	}
+
+
+}
+
 .dash_grid {
 	display: grid;
 	grid-template-areas:
@@ -20,162 +56,152 @@
 		color: $text;
 	}
 
-	.dash_profile {
-		grid-area: profile;
-		border-radius: 15px;
-		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
 
-		.settingIcon {
-			position: absolute;
-			left: 70px;
-			top: 65px;
+}
 
-			svg {
-				font-size: 25px;
-				color: $body2;
-			}
-		}
+.dash_profile.MuiPaper-root {
+	grid-area: profile;
+	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+	border-radius: 15px;
 
-		.profileTitle {
-			.MuiTypography-root {
+	.settingIcon {
+		position: relative;
+		left: 53px;
+		top: 33px;
 
-				padding-top: 25px;
-				color: $text;
-				font-size: 20px;
-				font-family: 'BCSans-Bold';
-				text-align: center;
-			}
-		}
-
-		.profile_card {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-
-			.userIcon {
-				font-size: 200px;
-			}
-
-			.userInfo {
-				margin: 1rem auto;
-				display: grid;
-				grid-template-columns: 64px auto;
-				grid-template-rows: auto 70px;
-				text-align: left;
-
-				.name {
-					font-size: 16px;
-					color: $text;
-				}
-
-				.role {
-					color: #ADB5BD;
-					grid-column: 2;
-					padding-bottom: 1.5rem;
-					font-size: 13px;
-					position: relative;
-					left: 8px;
-				}
-
-				.phoneIcon,
-				.emailIcon,
-				.businessIcon {
-					margin-bottom: 20px;
-				}
-
-				.infoText {
-					font-size: 13px;
-					color: $text;
-					padding-top: 3px;
-				}
-
-			}
-
-			.divider1 {
-				position: relative;
-				top: -175px;
-			}
-
-			.divider2 {
-				margin-bottom: 25px;
-			}
-
-			.quick_access {
-				margin-left: auto;
-				margin-right: auto;
-				margin-top: auto;
-				text-align: center;
-				width: 100%;
-
-				.quickAccessText {
-					margin-bottom: 10px;
-					font-size: 16px;
-					color: $text;
-				}
-
-				.actions {
-					display: flex;
-					justify-content: space-evenly;
-					margin-bottom: 10px;
-
-					p {
-						font-size: 10px;
-						margin: 0 0 0 10px;
-						opacity: 0;
-						position: absolute;
-					}
-
-					.generateBtn:hover {
-						p {
-							left: 60px;
-							opacity: 1;
-							color: #495057;
-						}
-					}
-
-					.searchBtn:hover {
-						p {
-							left: 150px;
-							opacity: 1;
-							color: #495057;
-						}
-					}
-
-					.actionBtn:hover {
-						p {
-							left: 210px;
-							opacity: 1;
-							color: #495057;
-						}
-					}
-				}
-			}
+		svg {
+			font-size: 25px;
+			color: $body2;
 		}
 	}
 
-	.dash_welcome {
-		grid-area: welcome;
-		border-radius: 15px;
-		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+	.profileTitle {
+		padding: 0;
 
-		.MuiCardHeader-root {
-			padding: 30px 0 10px 35px;
+		.MuiTypography-root {
+			color: $text;
+			font-size: 20px;
+			font-family: 'BCSans-Bold';
+			text-align: center;
+		}
+	}
 
-			.MuiCardHeader-title {
-				font-family: 'BCSans-Bold';
-				padding-top: 10px;
-				color: $text;
-				font-size: 20px;
-			}
+	.profile_card {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 
-			.MuiCardHeader-subheader {
-				padding-top: 10px;
+		.userIcon {
+			font-size: 200px;
+		}
+
+		.userInfo {
+			margin: 1rem auto;
+			display: grid;
+			grid-template-columns: 64px auto;
+			grid-template-rows: auto 70px;
+			text-align: left;
+
+			.name {
 				font-size: 16px;
-				color: #787f81;
+				color: $text;
+			}
+
+			.role {
+				color: #ADB5BD;
+				grid-column: 2;
+				padding-bottom: 1.5rem;
+				font-size: 13px;
+				position: relative;
+				right: 16px;
+			}
+
+			.phoneIcon,
+			.emailIcon,
+			.businessIcon {
+				margin-bottom: 20px;
+			}
+
+			.infoText {
+				font-size: 13px;
+				color: $text;
+				padding-top: 3px;
 			}
 
 		}
+
+		.divider1 {
+			position: relative;
+			top: -175px;
+		}
+
+		.divider2 {
+			margin-bottom: 25px;
+		}
+
+		.quick_access {
+			margin-left: auto;
+			margin-right: auto;
+			margin-top: auto;
+			text-align: center;
+			width: 100%;
+
+			.quickAccessText {
+				margin-bottom: 10px;
+				font-size: 16px;
+				color: $text;
+			}
+
+			.actions {
+				display: flex;
+				padding: 20px;
+
+				p {
+					font-size: 10px;
+					opacity: 0;
+				}
+
+				.generateBtn:hover+p,
+				.searchBtn:hover+p,
+				.actionBtn:hover+p {
+					opacity: 1;
+					color: #495057;
+				}
+			}
+		}
 	}
+}
+
+.dash_welcome.MuiPaper-root {
+	grid-area: welcome;
+	border-radius: 15px;
+	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+
+	.MuiCardHeader-root {
+		padding: 30px 0 10px 35px;
+
+		.MuiCardHeader-title {
+			font-family: 'BCSans-Bold';
+			padding-top: 10px;
+			color: $text;
+			font-size: 20px;
+		}
+
+		.MuiCardHeader-subheader {
+			padding-top: 10px;
+			font-size: 16px;
+			color: #787f81;
+		}
+
+	}
+}
+
+
+.welcome_buttons-md {
+	.MuiButton-root {
+		font-size: 13px;
+	}
+
 }
 
 .welcome_buttons {
