fix and clean some styles

--- a/src/main/styles/colours.scss
+++ b/src/main/styles/colours.scss
@@ -10,8 +10,9 @@ $headerText: #ffffff;
 $darkBackgroundText: #ffffff;
 $navText: #ECFFFB;
 
-$body2: #868e96;
 $text: #313132;
+$body2: #868e96;
+$secondaryText: #787f81;
 $mutedText: lighten($text, 30%);
 
 $mainNavBg: #ffffff;
@@ -29,7 +30,3 @@ $tableOddRowHoverForeground: #333333;
 $link: #1a5a96;
 $linkHover: #0099ff;
 $linkActive: #ff9900;
-
-// $link: #0033ff;
-// $linkHover: #0099ff;
-// $linkActive: #ff9900;
