--- a/src/main/styles/updateID.scss
+++ b/src/main/styles/updateID.scss
@@ -25,7 +25,7 @@
             .subtitle {
                 font-size: 16px;
                 margin-block: 8px 32px;
-                color: #787f81;
+                color: $secondaryText;
 
             }
 
@@ -64,11 +64,9 @@
             border: 1px solid #dee2e6;
             border-radius: 5px;
             background-color: #ffffff;
-            background-size: cover;
             font-size: 14px;
-            color: #868e96;
-            text-decoration: none solid rgb(134, 142, 150);
-            text-transform: capitalize;
+            color: $body2;
+            font-weight: 400;
         }
 
         button:nth-child(2) {
@@ -141,12 +139,12 @@
         .MuiDialogContent-root {
             padding: 0 24px;
             font-size: 16px;
-            color: #787f81;
+            color: $secondaryText;
 
             .MuiTypography-root {
                 font-size: 16px;
                 font-family: 'BCSans-Bold';
-                color: #787f81;
+                color: $secondaryText;
                 padding-top: 20px;
             }
         }
@@ -241,7 +239,7 @@
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: baseline;
-                color: #868e96;
+                color: $body2;
 
                 .MuiFormControlLabel-root {
                     color: #666666;
@@ -375,106 +373,24 @@
 
 }
 
-.details_status_card {
-    margin: 0 auto;
-    margin-block: 9px 18px;
-    width: 1344px;
-    height: 158px;
-    display: flex;
-    align-items: center;
-    padding-left: 78px;
-    padding-right: 40px;
-
-    .idInformationCard {
-        display: flex;
-        flex-direction: column;
-
-        .info {
-            display: flex;
-            align-items: center;
-
-            span:nth-child(1) {
-                margin-right: 217px;
-
-                .MuiTypography-root:nth-child(2) {
-                    color: #ffffff;
-                    font-size: 13px;
-                }
-            }
-
-            span:nth-child(2) {
-                margin-right: 180px;
-            }
-
-            span:nth-child(3) {
-                margin-right: 184px;
-            }
-        }
-    }
-
-    .title {
-        font-family: 'BCSans-Bold';
-        font-size: 18px;
-        margin-bottom: 15px;
-    }
-
-    .MuiTypography-body1 {
-        color: $text;
-    }
-
-    .MuiTypography-body2 {
-        color: $body2;
-    }
+.multiple_card {
+    border-left: 8px solid $link;
 }
 
-.multiple_card {
-    margin: 0 auto;
+.multiple_card,
+.details_card {
     margin-top: 9px;
     width: 100%;
     height: 152px;
     display: flex;
     align-items: center;
-    padding-left: 58px;
-    padding-right: 40px;
+    padding-inline: 50px;
     position: relative;
     z-index: 5 !important;
-    border-left: 8px solid #1a5a96;
-    justify-content: space-between; //test 0613
     text-align: left;
 
-
-    .idInformationCard {
-        display: flex;
-        flex-direction: column;
-
-        .info {
-            span:nth-child(1) {
-                margin-right: 82px;
-
-                .MuiTypography-root:nth-child(2) {
-                    color: #ffffff;
-                    font-size: 13px;
-                }
-            }
-        }
-    }
-
-    .title {
-        font-family: 'BCSans-Bold';
-        font-size: 18px;
-        margin-bottom: 15px;
-    }
-
-    .MuiTypography-body1 {
-        color: $text;
-    }
-
-    .MuiTypography-body2 {
-        color: $body2;
-    }
-
     span {
-        width: 150px;
+        width: 18%;
     }
 
     .cardSubtitle {
@@ -486,6 +402,14 @@
             font-size: 13px;
             color: #ffffff;
         }
+    }
+
+    .MuiTypography-body1 {
+        color: $text;
+    }
+
+    .MuiTypography-body2 {
+        color: $body2;
     }
 
     .info {
@@ -498,85 +422,22 @@
     .expand_icon {
         svg {
             font-size: 40px;
-            color: #1a5a96;
+            color: $link;
         }
     }
 
-
-}
-
-.card {
-    margin: 0 auto;
-    margin-top: 12px;
-    width: 1296px;
-    height: 120px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 58px;
-    padding-right: 40px;
-    position: relative;
-    z-index: 5 !important;
-
-    .idInformationCard {
+    .status_card {
         display: flex;
         flex-direction: column;
 
-        .info {
-            span:nth-child(1) {
-
-                .MuiTypography-root:nth-child(2) {
-                    color: #ffffff;
-                    font-size: 13px;
-                }
-            }
-        }
-    }
-
-    .title {
-        font-family: 'BCSans-Bold';
-        font-size: 18px;
-        margin-bottom: 15px;
-    }
-
-    .MuiTypography-body1 {
-        color: $text;
-    }
-
-    .MuiTypography-body2 {
-        color: $body2;
-    }
-
-    .cardSubtitle {
-        width: 128px;
-
-        .MuiTypography-root:nth-child(1) {
+        .status_title {
+            font-weight: 700;
             font-size: 18px;
-        }
-
-        .MuiTypography-root:nth-child(2) {
-            font-size: 13px;
-            color: #ffffff;
+            margin-bottom: 15px;
         }
     }
 
-    .info {
-        display: flex;
-        align-items: center;
-        width: 710px;
-        justify-content: space-between;
 
-        span {
-            width: 166px;
-        }
-    }
-
-    .expand_icon {
-        svg {
-            font-size: 40px;
-            color: #1a5a96;
-        }
-    }
 }
 
 .expand_paper {
@@ -584,11 +445,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-
-    p,
-    .MuiTableCell-root {
-        color: $text;
-    }
 
     .cardDetails {
         width: 79%;
@@ -882,17 +738,11 @@
     .cardButtons {
         display: flex;
         justify-content: flex-end;
+        gap: 8px;
 
-        .update_btn {
+        .MuiButton-root {
             width: 132px;
-            height: 36px;
-            text-transform: capitalize;
             font-size: 14px;
-            margin-right: 8px;
-        }
-
-        .MuiButton-contained {
-            font-weight: 700;
         }
     }
 
@@ -907,8 +757,7 @@
 
     .MuiDataGrid-root {
         border: none;
-        color: $text;
-        margin: 60px auto;
+        margin: 32px auto 64px;
         width: 100%;
         height: 335px;
     }
@@ -918,14 +767,19 @@
         outline: none !important;
     }
 
-    .id_cell {
-        color: #1a5a96;
+    //multi-edit dataGrid
+    .MuiDataGrid-cell:not(.id_cell) {
+        color: $secondaryText;
     }
 
-    .sex_cell,
-    .region_cell {
-        color: #787f81;
+    .id_cell {
+        color: $link;
     }
+
+    // .sex_cell,
+    // .region_cell {
+    //     color: $secondaryText;
+    // }
 
     .findSpecies {
         width: 100%;
@@ -935,7 +789,7 @@
 
 //HidableDetails
 .hidableDetails {
-    margin: 40px 0;
+    margin-top: 40px;
 
     .title {
         font-family: 'BCSans-Bold';
@@ -1052,6 +906,7 @@
     text-align: center;
     height: 25px;
     border-radius: 50px;
+    color: #ffffff;
 }
 
 .UNASSIGNED {
@@ -1060,14 +915,16 @@
     text-align: center;
     height: 25px;
     border-radius: 50px;
+    color: #ffffff;
 }
 
 .RETIRED {
-    background-color: #868e96;
+    background-color: $body2;
     width: 90px;
     text-align: center;
     height: 25px;
     border-radius: 50px;
+    color: $text;
 }
 
 //Multiple status signal
@@ -1080,7 +937,6 @@
 }
 
 //Status Form
-
 .flagIcon:hover {
     color: #d8292f;
 }
@@ -1098,61 +954,44 @@
     }
 
     .MuiDialogTitle-root {
-        font-size: 18px;
-        font-family: 'BCSans-Bold';
-        padding: 0 0 12px 0;
+        padding: 0;
+
+        .MuiTypography-root:nth-child(1) {
+            font-size: 18px;
+            font-weight: 700;
+        }
+
+        .MuiTypography-root:nth-child(2) {
+            font-weight: 700;
+            font-size: 14px;
+            margin-block: 12px;
+        }
+
+        .MuiTypography-root:nth-child(3) {
+            font-size: 13px;
+            color: $body2;
+        }
     }
 
     .MuiDialogContent-root {
         padding: 0;
 
-        .MuiTypography-root:nth-child(1) {
-            font-family: 'BCSans-Bold';
-            font-size: 14px;
-            color: $text;
-            margin-bottom: 12px;
-        }
-
-        .MuiTypography-root:nth-child(2) {
-            font-size: 13px;
-            color: #868e96;
-        }
-
         .MuiTextField-root {
             width: 100%;
-        }
-
-        .twoColumns {
-            width: calc((100% - 32px) / 2);
-            margin-top: 24px;
-        }
-
-        .marginR {
-            margin-right: 32px;
-        }
-
-        .oneColumn {
-            width: 100%;
-            margin-top: 24px;
         }
     }
 
     .MuiDialogActions-root {
-        padding: 0;
-        margin-top: 35px;
+        display: flex;
+        justify-content: flex-end;
+        padding: 35px 0 0;
 
-        .cardButtons {
-            display: flex;
-            justify-content: flex-end;
-
-            .update_btn {
-                width: 100px;
-                height: 35px;
-                text-transform: capitalize;
-                font-size: 14px;
-                margin-left: 8px;
-            }
+        .MuiButton-root {
+            width: 100px;
+            height: 35px;
+            font-size: 14px;
         }
+
     }
 }
 
@@ -1163,19 +1002,18 @@
 
     .MuiDialogTitle-root {
         font-size: 14px;
-        background-color: #1a5a96;
+        background-color: $link;
         color: #ffffff;
     }
 
     .MuiDialogContent-root {
 
         .MuiAutocomplete-root {
-            margin-top: 32px;
-            margin-bottom: 32px;
+            margin-block: 32px;
             width: 100%;
         }
 
-        .region {
+        .multiEdit_field {
             width: 100%;
             margin-bottom: 24px;
         }
@@ -1185,7 +1023,7 @@
             padding-inline: 24px;
 
             .MuiDataGrid-columnHeaders {
-                color: #787f81;
+                color: $secondaryText;
             }
 
             .MuiDataGrid-cell:focus {
@@ -1196,27 +1034,19 @@
                 display: none;
             }
         }
-
-
     }
 
-
     .MuiDialogActions-root {
+        display: flex;
+        justify-content: flex-end;
+        padding: 20px 24px 45px 0;
 
-
-        .cardButtons {
-            display: flex;
-            justify-content: flex-end;
-            margin: 0px 8px 45px 0;
-
-            .update_btn {
-                width: 100px;
-                height: 35px;
-                text-transform: capitalize;
-                font-size: 14px;
-                margin-right: 8px;
-            }
+        .MuiButton-root {
+            width: 100px;
+            height: 35px;
+            font-size: 14px;
         }
+
     }
 }
 
@@ -1224,7 +1054,6 @@
     .MuiDialog-paper {
         width: 580px;
     }
-
 
     .MuiDialogTitle-root {
         font-size: 16px;
@@ -1234,7 +1063,7 @@
     .MuiDialogContent-root {
         .MuiDataGrid-root {
             border: none;
-            color: #787f81;
+            color: $secondaryText;
         }
 
         .MuiDataGrid-columnSeparator {
@@ -1243,22 +1072,15 @@
 
     }
 
-
     .MuiDialogActions-root {
+        display: flex;
+        justify-content: flex-end;
+        padding: 10px 24px 45px 0;
 
-
-        .cardButtons {
-            display: flex;
-            justify-content: flex-end;
-            margin: 10px 8px 45px 0;
-
-            .update_btn {
-                width: 100px;
-                height: 35px;
-                text-transform: capitalize;
-                font-size: 14px;
-                margin-right: 8px;
-            }
+        .MuiButton-root {
+            width: 100px;
+            height: 35px;
+            font-size: 14px;
         }
     }
 }
